--- a/io/io/io/am/user/1/bootstrap-452.htm
+++ b/io/io/io/am/user/1/bootstrap-452.htm
@@ -1,5 +1,5 @@
 ﻿<div class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" href="#">{{title}}</a>
+    <a class="nav-link dropdown-toggle" href="#">{{full_name}}</a>
     <div class="dropdown-menu">
         <a class="dropdown-item" href="#">Action</a>
         <a class="dropdown-item" href="#">Another action</a>
