--- a/io/io/io/site/index.bootstrap-452.htm
+++ b/io/io/io/site/index.bootstrap-452.htm
@@ -6,6 +6,10 @@
 </head>
 <body>
     <h1>index: [1]</h1>
-    <h3><a href="/login">Login</a></h3>
+    <h3><a href="/login">Login2</a></h3>
+    <hr />
+    {{user_1.bootstrap-452}}
+    <hr />
+    {{user_1.bootstrap-452}}
 </body>
 </html>
