--- a/io/io/public/1/index.html
+++ b/io/io/public/1/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>index: [1]</h1>
-    <h3><a href="/login">Login</a></h3>
+    <h3><a href="/login">Login1</a></h3>
 </body>
 </html>
