--- a/io/io/io/site/index.bootstrap-452.htm
+++ b/io/io/io/site/index.bootstrap-452.htm
@@ -8,6 +8,12 @@
     <h1>index: [1]</h1>
     <h3><a href="/login">Login2</a></h3>
     <hr />
+    <div id="app">
+        <div id="ui_user_1"></div>
+        <hr />
+        <div id="ui_user_2"></div>
+    </div>
+    <hr />
     {{user_1.bootstrap-452}}
     <hr />
     {{user_1.bootstrap-452}}
