--- a/io/io/io/site/index.bootstrap-452.htm
+++ b/io/io/io/site/index.bootstrap-452.htm
@@ -5,8 +5,8 @@
     <title></title>
 </head>
 <body>
-    <h1>index: [1]</h1>
-    <h3><a href="/login">Login2</a></h3>
+    <h1>index.bootstrap-452</h1>
+    <h3><a href="/login">Login</a></h3>
     <hr />
     <div id="app">
         <div id="ui_user_1"></div>
