--- a/io/io/io/ui/user/1/bootstrap-452.htm
+++ b/io/io/io/ui/user/1/bootstrap-452.htm
@@ -1,4 +1,4 @@
-﻿<!-- user.id=1 -->
+﻿<!-- { "model":"user", "type":"id", "value": "1" } -->
 <div class="nav-item dropdown ui_user_1" data-ui="ui_user_1" data-id="{{username}}">
     <a class="nav-link dropdown-toggle" href="#">{{full_name}}</a>
     <div class="dropdown-menu">
