--- a/io/io/io/site/index.bootstrap-500.htm
+++ b/io/io/io/site/index.bootstrap-500.htm
@@ -31,5 +31,6 @@
 
     {{poster_1--bootstrap-500--2}}
 
+    {{footer_1--bootstrap-500--4}}
 
     <!--<script src="/io/theme/bootstrap-500/dist/js/bootstrap.bundle.min.js"></script>-->
