done ui.sdk version 1

--- a/io/io/io/site/index.bootstrap-500.htm
+++ b/io/io/io/site/index.bootstrap-500.htm
@@ -31,6 +31,22 @@
 
     {{poster_1--bootstrap-500--2}}
 
+    {{listview_5--bootstrap-500--1}}
+
+    {{slide_1--bootstrap-500--1}}
+
+    {{listview_4--bootstrap-500--1}}
+
+    {{listview_3--bootstrap-500--1}}
+
+    {{listview_3--bootstrap-500--2}}
+
+    {{listview_2--bootstrap-500--1}}
+
+    {{listview_1--bootstrap-500--1}}
+
+    {{form_checkout--bootstrap-500--1}}
+
     {{footer_1--bootstrap-500--4}}
 
     <!--<script src="/io/theme/bootstrap-500/dist/js/bootstrap.bundle.min.js"></script>-->
