--- a/io/io/io/ui/footer/1/bootstrap-500--3.htm
+++ b/io/io/io/ui/footer/1/bootstrap-500--3.htm
@@ -1,4 +1,4 @@
-﻿<div id="[{ID}]">
+﻿<div>
     <hr class="featurette-divider pt-0 pb-0 mt-0 mb-0">
 
     <footer class="my-5 pt-5 text-muted text-center text-small">
