--- a/io/io/io/ui/header/1/bootstrap-500--3.htm
+++ b/io/io/io/ui/header/1/bootstrap-500--3.htm
@@ -1,4 +1,4 @@
-﻿<header id="[{ID}]" class="bg-white border-bottom shadow-sm">
+﻿<header class="bg-white border-bottom shadow-sm">
     <div class="container d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3">
         <p class="h5 my-0 mr-md-auto font-weight-normal">Company name</p>
         <nav class="my-2 my-md-0 mr-md-3">
