--- a/io/io/io/ui/listview/3/bootstrap-500--1.htm
+++ b/io/io/io/ui/listview/3/bootstrap-500--1.htm
@@ -1,4 +1,4 @@
-﻿<div id="[{ID}]" class="listview_3--bootstrap-500--1 container">
+﻿<div class="listview_3--bootstrap-500--1 container">
     <div class="row featurette">
         <div class="col-md-7">
             <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your mind.</span></h2>
