--- a/io/io/io/ui/listview/4/bootstrap-500--1.htm
+++ b/io/io/io/ui/listview/4/bootstrap-500--1.htm
@@ -1,4 +1,4 @@
-﻿<div id="[{ID}]" class="listview_4--bootstrap-500--1 container">
+﻿<div class="listview_4--bootstrap-500--1 container">
 
     <!-- Three columns of text below the carousel -->
     <div class="row">
