--- a/io/io/io/ui/footer/1/bootstrap-500--2.htm
+++ b/io/io/io/ui/footer/1/bootstrap-500--2.htm
@@ -1,4 +1,4 @@
-﻿<div id="[{ID}]">
+﻿<div>
     <hr class="featurette-divider pt-0 pb-0 mt-0 mb-0">
 
     <footer class="pt-4 my-md-5 pt-md-5 container">
