--- a/io/io/io/ui/header/1/bootstrap-500--1.htm
+++ b/io/io/io/ui/header/1/bootstrap-500--1.htm
@@ -1,4 +1,4 @@
-﻿<header id="[{ID}]">
+﻿<header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Carousel</a>
