--- a/io/io/io/ui/header/1/bootstrap-500--2.htm
+++ b/io/io/io/ui/header/1/bootstrap-500--2.htm
@@ -1,4 +1,4 @@
-﻿<header id="[{ID}]">
+﻿<header>
     <div class="collapse bg-dark" id="navbarHeader">
         <div class="container">
             <div class="row">
