--- a/io/io/io/ui/listview/1/bootstrap-500--1.htm
+++ b/io/io/io/ui/listview/1/bootstrap-500--1.htm
@@ -1,4 +1,4 @@
-﻿<div id="[{ID}]" class="listview_1--bootstrap-500--1 album py-5 bg-light">
+﻿<div class="listview_1--bootstrap-500--1 album py-5 bg-light">
     <div class="container">
 
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
