--- a/io/io/io/ui/listview/2/bootstrap-500--1.htm
+++ b/io/io/io/ui/listview/2/bootstrap-500--1.htm
@@ -1,4 +1,4 @@
-﻿<div id="[{ID}]" class="listview_2--bootstrap-500--1 container">
+﻿<div class="listview_2--bootstrap-500--1 container">
     <div class="row mb-2">
         <div class="col-md-6">
             <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
