--- a/io/io/io/ui/listview/3/bootstrap-500--2.htm
+++ b/io/io/io/ui/listview/3/bootstrap-500--2.htm
@@ -1,4 +1,4 @@
-﻿<div id="[{ID}]" class="listview_3--bootstrap-500--1 container">
+﻿<div class="listview_3--bootstrap-500--1 container">
 
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
         <h1 class="display-4">Pricing</h1>
