--- a/io/io/io/ui/listview/5/bootstrap-500--1.htm
+++ b/io/io/io/ui/listview/5/bootstrap-500--1.htm
@@ -1,4 +1,4 @@
-﻿<div id="[{ID}]">
+﻿<div>
     <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
         <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
             <div class="my-3 py-3">
