--- a/io/io/io/ui/slide/1/bootstrap-500--1.htm
+++ b/io/io/io/ui/slide/1/bootstrap-500--1.htm
@@ -1,4 +1,4 @@
-﻿<div id="[{ID}]" class="carousel slide" data-ride="carousel">
+﻿<div class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
         <li data-target="#[{ID}]" data-slide-to="0" class="active"></li>
         <li data-target="#[{ID}]" data-slide-to="1"></li>
