--- a/io/io/io/ui/user/1/bootstrap-452--1.htm
+++ b/io/io/io/ui/user/1/bootstrap-452--1.htm
@@ -1,4 +1,4 @@
-﻿<div id="[{ID}]" class="nav-item dropdown ui_user_1" data-ui="ui_user_1" data-id="{{username}}">
+﻿<div class="nav-item dropdown ui_user_1" data-ui="ui_user_1" data-id="{{username}}">
     <a class="nav-link dropdown-toggle" href="#">{{full_name}}</a>
     <div class="dropdown-menu">
         <a class="dropdown-item" href="#">Action</a>
