--- a/io/io/public/1/header_1--bootstrap-500--4.htm
+++ b/io/io/public/1/header_1--bootstrap-500--4.htm
@@ -1,4 +1,4 @@
-﻿<header id="[{ID}]" class="header_1--bootstrap-500--4 sticky-top py-1">
+﻿<header class="header_1--bootstrap-500--4 sticky-top py-1">
     <nav class="container d-flex flex-column flex-md-row justify-content-between">
         <a href="/" class="py-2">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mx-auto" role="img" viewBox="0 0 24 24">
