--- a/io/io/public/1/poster_1--bootstrap-500--1.htm
+++ b/io/io/public/1/poster_1--bootstrap-500--1.htm
@@ -1,4 +1,4 @@
-﻿<div id="[{ID}]" style="opacity:0;" class="py-5 text-center container">
+﻿<div class="py-5 text-center container">
     <div class="row py-lg-5">
         <div class="col-lg-6 col-md-8 mx-auto">
             <h1 class="font-weight-light">Album example</h1>
