--- a/io/io/io/base/ui.sdk.htm
+++ b/io/io/io/base/ui.sdk.htm
@@ -7,16 +7,17 @@
 </div>
 
 <div id="___io_ui--edit-panel">
-    <div class="___io_ui--edit-panel--modal"></div>   
+    <div class="___io_ui--edit-panel--modal"></div>
 </div>
 
 <input type="hidden" id="___io_site" value="[{SITE}]" />
 <input type="hidden" id="___io_theme" value="[{THEME}]" />
 <input type="hidden" id="___io_token" value="[{TOKEN}]" />
 
-<script src="/io/vue.min.js" type="text/javascript"></script>
-<script src="/io/ui.sdk.js" type="text/javascript"></script>
-<link href="/io/ui.sdk.css" rel="stylesheet" />
+<script src="/io/lib/dom-to-image.min.js" type="text/javascript"></script>
+<script src="/io/lib/vue.min.js" type="text/javascript"></script>
+<script src="/io/base/ui.sdk.js" type="text/javascript"></script>
+<link href="/io/base/ui.sdk.css" rel="stylesheet" />
 
 </body>
 </html>
