--- a/io/io/io/base/ui.iframe-pop.htm
+++ b/io/io/io/base/ui.iframe-pop.htm
@@ -45,7 +45,7 @@
             min-width: 90%;
             min-height: 80%;
             left: 5%;
-            border: 1px solid #000;
+            border: 1px solid #ccc;
             display: inline-block;
         }
 
