vue for iframe popup

--- a/io/io/io/base/ui.sdk.htm
+++ b/io/io/io/base/ui.sdk.htm
@@ -18,6 +18,7 @@
 <script src="/io/lib/vue.min.js" type="text/javascript"></script>
 <script src="/io/base/ui.sdk.js" type="text/javascript"></script>
 <link href="/io/base/ui.sdk.css" rel="stylesheet" />
+<link href="/io/base/ui.iframe-pop.css" rel="stylesheet" />
 
 </body>
 </html>
